Fix table spacing e.g. /widgets/all-widgets

--- a/resources/css/base/elements/tables.css
+++ b/resources/css/base/elements/tables.css
@@ -69,6 +69,10 @@
         border-collapse: collapse;
         border-spacing: 0;
         margin-block: var(--spacing-2xl);
+        /* An heading followed by a table e.g. >> /widgets/all-widgets */
+        header:has(:only-child) + * & {
+            margin-block-start: var(--spacing-md);
+        }
         font-family: var(--font-family-main);
 
         td {
